# trade

./: .dockerignore  .env.sample  .gitignore  COMMANDS.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml
configs/: prometheus.yml
docs/: ARCHITECTURE.md
infra/nginx/: nginx.conf
infra/postgres/: init.sql
services/exec/: Dockerfile  pyproject.toml
services/exec/app/: main.py
services/exec/app/routes/: orders.py  quotes.py
services/web/: .pre-commit-config.yaml  Dockerfile  conftest.py  pyproject.toml  pytest.ini
services/web/apps/accounts/: admin.py  models.py
services/web/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers_user_groups_and_more.py
services/web/apps/api/: consumers.py  health_urls.py  routing.py  serializers.py  urls.py  viewsets.py
services/web/apps/backtest/: admin.py  engine.py  evaluator.py  models.py  tasks.py
services/web/apps/backtest/management/commands/: generate_weekly_report.py  run_demo_backtest.py
services/web/apps/backtest/migrations/: 0001_initial.py
services/web/apps/dashboard/: urls.py  views.py
services/web/apps/data/: admin.py  models.py  tasks.py
services/web/apps/data/loaders/: __init__.py  bhavcopy.py  corporate_actions.py
services/web/apps/data/management/commands/: build_minute_bars.py  load_bse_sample.py  load_nse_sample.py
services/web/apps/data/migrations/: 0001_initial.py
services/web/apps/live/: admin.py  models.py
services/web/apps/live/brokers/: __init__.py  base.py  paper.py  upstox.py  zerodha.py
services/web/apps/live/management/commands/: start_paper_trading.py
services/web/apps/live/migrations/: 0001_initial.py
services/web/apps/strategies/: admin.py  models.py
services/web/apps/strategies/migrations/: 0001_initial.py
services/web/apps/strategies/reference/: __init__.py  mean_reversion.py  momentum.py  momentum_polars.py  pairs_trading.py
services/web/apps/strategies/sdk/: __init__.py  base.py  datafeed.py  execution.py  fees.py  risk.py  signal.py  slippage.py
services/web/core/: asgi.py  celery.py  settings.py  settings_local.py  urls.py
services/web/templates/: base.html
services/web/templates/dashboard/: backtest_results.html  data_browser.html  index.html  live_monitor.html  overview.html  strategies_list.html  strategy_detail.html
services/web/tests/: test_api.py  test_models.py  test_strategy_sdk.py
