[tool.poetry]
name = "trading-exec"
version = "1.0.0"
description = "Trading Platform - Execution Gateway"
authors = ["Trading Platform <dev@tradingplatform.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
pydantic = "^2.5"
pydantic-settings = "^2.1"
redis = "^5.0"
prometheus-client = "^0.19"
python-json-logger = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
httpx = "^0.26"
ruff = "^0.1"
black = "^23.12"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
